--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
       "cross-fetch": "^3.1.4"
     },
     "devDependencies": {
+      "@itwin/projects-client": "^0.3.0",
       "@itwin/build-tools": "^3.0.0",
       "@itwin/certa": "^3.0.0",
       "@itwin/core-bentley": "^3.0.0",
