--- a/package.json
+++ b/package.json
@@ -45,17 +45,17 @@
       "@itwin/core-bentley": "^3.0.0",
       "@itwin/eslint-plugin": "^3.0.0",
       "@itwin/oidc-signin-tool": "^3.2.0",
-      "@types/chai": "^4.1.4",
-      "@types/mocha": "^8.2.2",
-      "@types/node": "14.14.31",
-      "chai": "^4.1.2",
+      "@types/chai": "^4.3.0",
+      "@types/mocha": "^9.1.0",
+      "@types/node": "^17.0.15",
+      "chai": "^4.3.6",
       "dotenv": "^10.0.0",
       "dotenv-expand": "^5.1.0",
-      "eslint": "^7.11.0",
-      "mocha": "^8.3.2",
-      "source-map-loader": "^1.0.0",
-      "typescript": "~4.4.0",
-      "webpack": "4.42.0",
+      "eslint": "^8.8.0",
+      "mocha": "^9.2.0",
+      "source-map-loader": "^3.0.0",
+      "typescript": "~4.5.5",
+      "webpack": "^5.68.0",
       "webpack-cli": "^4.9.0"
     },
     "eslintConfig": {
