--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "build": "npm run -s build:cjs && npm run -s build:esm",
     "build:cjs": "tsc 1>&2 --outDir lib/cjs",
     "build:esm": "tsc 1>&2 --module ES2020 --outDir lib/esm",
-    "lint": "eslint -f visualstudio \"./src/**/*.ts\" 1>&2",
-    "lint:fix": "npm run lint -- --fix",
+    "lint": "eslint */**/*.{js,ts,tsx}",
+    "lint:fix": "npm run lint -- --fix && npm run lint:copyright -- --fix */**/*.{js,ts,tsx,scss}",
+    "lint:copyright": "node scripts/copyright-linter.js",
     "webpackTests": "webpack --config ./src/test/utils/webpack.config.js 1>&2",
     "test": "npm run build && npm run -s webpackTests && npm run -s test:chrome",
     "test:chrome": "certa -r chrome",
