--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:copyright": "node scripts/copyright-linter.js",
     "webpackTests": "webpack --config ./src/test/utils/webpack.config.js 1>&2",
     "test": "npm run build && npm run -s webpackTests && npm run -s test:chrome",
-    "test:chrome": "certa -r chrome",
+    "test:chrome": "certa -r node --cover true",
     "test:electron": "certa -r electron",
     "pack": "npm pack"
   },
@@ -40,6 +40,7 @@
     "cross-fetch": "^3.1.4"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@itwin/build-tools": "^3.0.0",
     "@itwin/certa": "^3.0.0",
     "@itwin/core-bentley": "^3.0.0",
@@ -53,7 +54,10 @@
     "dotenv-expand": "^5.1.0",
     "eslint": "^7.11.0",
     "mocha": "^8.3.2",
+    "nyc": "^15.1.0",
     "source-map-loader": "^1.0.0",
+    "source-map-support": "^0.5.21",
+    "ts-node": "^10.8.2",
     "typescript": "~4.4.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^4.9.0"
@@ -67,5 +71,9 @@
       "no-duplicate-imports": "off",
       "@typescript-eslint/consistent-type-imports": "error"
     }
+  },
+  "nyc": {
+    "extends": "@istanbuljs/nyc-config-typescript",
+    "check-coverage": true
   }
 }
