--- a/package.json
+++ b/package.json
@@ -12,11 +12,9 @@
     "lint": "eslint \"*/**/*.{js,ts}\"",
     "lint:fix": "npm run lint -- --fix",
     "lint:copyright": "node scripts/copyright-linter.js",
-    "webpackTests": "webpack --config ./src/test/utils/webpack.config.js 1>&2",
-    "test": "npm run build && npm run -s webpackTests && npm run -s test:chrome",
-    "test:chrome": "certa -r node --cover true",
-    "test:electron": "certa -r electron",
-    "pack": "npm pack"
+    "pack": "npm pack",
+    "cover": "nyc mocha lib/cjs/**/*.test.js",
+    "test:integration": "mocha lib/cjs/**/*.test.js --color"
   },
   "keywords": [
     "Bentley",
@@ -37,12 +35,14 @@
     "url": "https://github.com/iTwin/insights-client"
   },
   "dependencies": {
-    "cross-fetch": "^3.1.4"
+    "@bentley/oidc-signin-tool": "^2.19.28",
+    "chromium": "^3.0.3",
+    "cross-fetch": "^3.1.4",
+    "node-fetch": "^3.2.6"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@itwin/build-tools": "^3.0.0",
-    "@itwin/certa": "^3.0.0",
     "@itwin/core-bentley": "^3.0.0",
     "@itwin/eslint-plugin": "^3.0.0",
     "@itwin/oidc-signin-tool": "^3.2.0",
@@ -58,9 +58,7 @@
     "source-map-loader": "^1.0.0",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.8.2",
-    "typescript": "~4.4.0",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^4.9.0"
+    "typescript": "~4.4.0"
   },
   "eslintConfig": {
     "plugins": [
