--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "module": "lib/esm/insights-client.js",
   "typings": "lib/cjs/insights-client",
   "scripts": {
-    "build": "npm run -s build:cjs && npm run -s build:esm",
+    "build": "npm run -s build:cjs && npm run -s build:esm && npm run copy",
     "build:cjs": "tsc 1>&2 --outDir lib/cjs",
     "build:esm": "tsc 1>&2 --module es6 --outDir lib/esm",
-    "copy": "cp package.json lib/ && cp README.md lib/ && cp .npmrc lib/",
+    "copy": "copyfiles -u 4 src/test/imodels-client-test-utils/src/assets/* src/test/imodels-client-test-utils/src/assets/changesets/* lib/cjs/test/imodels-client-test-utils/src",
     "lint": "eslint \"*/**/*.{js,ts}\"",
     "lint:fix": "npm run lint -- --fix",
     "lint:copyright": "node scripts/copyright-linter.js",
@@ -36,10 +36,15 @@
     "url": "https://github.com/iTwin/insights-client"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.11.0",
     "@bentley/oidc-signin-tool": "^2.19.28",
+    "axios": "^0.27.2",
     "chromium": "^3.0.3",
+    "copyfiles": "^2.4.1",
     "cross-fetch": "^3.1.4",
-    "node-fetch": "^3.2.6"
+    "inversify": "^6.0.1",
+    "node-fetch": "^3.2.6",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
