--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@azure/storage-blob": "^12.11.0",
     "@bentley/oidc-signin-tool": "^2.19.28",
     "axios": "^0.27.2",
+    "chai-as-promised": "^7.1.1",
     "chromium": "^3.0.3",
     "copyfiles": "^2.4.1",
     "cross-fetch": "^3.1.4",
@@ -53,8 +54,9 @@
     "@itwin/eslint-plugin": "^3.0.0",
     "@itwin/oidc-signin-tool": "^3.2.0",
     "@types/chai": "^4.1.4",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/mocha": "^8.2.2",
-    "@types/node": "^14.14.31",
+    "@types/node": "^14.18.22",
     "chai": "^4.1.2",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
@@ -80,5 +82,8 @@
     "extends": "@istanbuljs/nyc-config-typescript",
     "exclude": "**/test/*",
     "check-coverage": true
+  },
+  "mocha": {
+    "timeout": 420000
   }
 }
