--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint:copyright": "node scripts/copyright-linter.js",
     "pack": "npm pack",
     "cover": "nyc mocha lib/cjs/integration-test/**/*.test.js",
-    "test:integration": "mocha lib/cjs/integration-test/**/*.test.js --color",
+    "test:integration": "mocha lib/cjs/integration-test/**/ReportsClient.test.js --color",
     "test:unit": "mocha lib/cjs/test/**/*.test.js --color"
   },
   "keywords": [
