--- a/package.json
+++ b/package.json
@@ -37,36 +37,33 @@
     "url": "https://github.com/iTwin/insights-client"
   },
   "dependencies": {
-    "@azure/storage-blob": "^12.11.0",
-    "@bentley/oidc-signin-tool": "^2.19.28",
-    "axios": "^0.27.2",
-    "chai-as-promised": "^7.1.1",
-    "chromium": "^3.0.3",
-    "copyfiles": "^2.4.1",
-    "cross-fetch": "^3.1.4",
-    "inversify": "^6.0.1",
-    "isomorphic-fetch": "^3.0.0",
-    "node-fetch": "^3.2.6",
-    "reflect-metadata": "^0.1.13",
-    "sinon": "^14.0.0"
+    "cross-fetch": "^3.1.4"
   },
   "devDependencies": {
-    "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@azure/storage-blob": "^12.11.0",
     "@itwin/build-tools": "^3.0.0",
     "@itwin/core-bentley": "^3.0.0",
     "@itwin/eslint-plugin": "^3.0.0",
-    "@itwin/oidc-signin-tool": "^3.2.0",
+    "@itwin/oidc-signin-tool": "^3.4.1",
     "@types/chai": "^4.1.4",
     "@types/chai-as-promised": "^7.1.5",
     "@types/mocha": "^8.2.3",
     "@types/node": "^14.18.22",
     "@types/sinon": "^10.0.13",
+    "axios": "^0.27.2",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "chromium": "^3.0.3",
+    "copyfiles": "^2.4.1",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "eslint": "^7.11.0",
+    "inversify": "^6.0.1",
+    "isomorphic-fetch": "^3.0.0",
     "mocha": "^8.3.2",
     "nyc": "^15.1.0",
+    "reflect-metadata": "^0.1.13",
+    "sinon": "^14.0.0",
     "source-map-loader": "^1.0.0",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.8.2",
@@ -83,7 +80,7 @@
     }
   },
   "nyc": {
-    "extends": "@istanbuljs/nyc-config-typescript",
+    "nycrc-path": "../../node_modules/@itwin/build-tools/.nycrc",
     "exclude": [
       "**/test/*"
     ],
