--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "isomorphic-fetch": "^3.0.0",
     "mocha": "^8.3.2",
     "nyc": "^15.1.0",
+    "puppeteer": "^15.5.0",
     "reflect-metadata": "^0.1.13",
     "sinon": "^14.0.0",
     "source-map-loader": "^1.0.0",
