--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,16 +30,13 @@ stages:
       pool:
         vmImage: $(imageName)
       steps:
-      - script: npm install -g pnpm@6.19.0
-        displayName: install pnpm globally
-
-      - script: pnpm install
+      - script: npm install
         displayName: 'Install dependencies'
 
-      - script: pnpm run build
+      - script: npm run build
         displayName: 'Build'
 
-      - script: pnpm run lint
+      - script: npm run lint
         displayName: 'Lint'
 
       - script: npm pack
@@ -84,14 +81,30 @@ stages:
         displayName: 'Publish Insights client'
         condition: and(succeeded(), eq(variables['info.shouldPublish'], 'true'))
 
-- stage: Publish
-  displayName: Publish
-  condition: and(succeeded(), eq(dependencies.Build.outputs['BuildPackages.linux.info.shouldPublish'], 'true'))
-  dependsOn: Build
-
-  jobs:
+  - stage: Test
+    displayName: Test
+    jobs:
+    - job: RunTests
+      strategy:
+        matrix:
+          linux:
+            imageName: 'ubuntu-latest'
+          mac:
+            imageName: 'macos-latest'
+          windows:
+            imageName: 'windows-latest'
+      pool:
+        vmImage: $(imageName)
+      steps:
+      - script: npm run test:integration
+    
+  - stage: Publish
+    displayName: Publish
+    condition: and(succeeded(), eq(dependencies.Build.outputs['BuildPackages.linux.info.shouldPublish'], 'true'))
+    dependsOn: Build
+    jobs:
     - template: templates/npmjs-publish-deployment.yaml@build-pipeline-scripts
-      parameters:
-        path: '*.tgz'
-        artifactName: InsightsClient
-        name: InsightsClient
+        parameters:
+          path: '*.tgz'
+          artifactName: InsightsClient
+          name: InsightsClient
