--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ stages:
       pool:
         vmImage: $(imageName)
       steps:
-      - script: npm install
+      - script: npm ci
         displayName: 'Install dependencies'
 
       - script: npm run build
