--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -8,4 +8,4 @@
 # the repo. Unless a later match takes precedence,
 # @global-owner1 and @global-owner2 will be requested for
 # review when someone opens a pull request.
-*       @bingjiez @arnobmallickbsw @guillar1
+*       @bingjiez @arnobmallickbsw @guillar1 @MindaugasButkus
