--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,6 +39,9 @@ stages:
       - script: npm run lint
         displayName: 'Lint'
 
+      - script: npm audit --registry=https://registry.npmjs.org --audit-level=high
+        displayName: 'Audit'
+
       - script: npm run test:unit
         displayName: Run unit tests
 
