--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "module": "lib/esm/insights-client.js",
   "typings": "lib/cjs/insights-client",
   "scripts": {
-    "build": "npm run -s build:cjs && npm run -s build:esm && npm run copy",
+    "build": "npm run -s build:cjs && npm run -s build:esm && npm run copy && npm run copy:test",
     "build:cjs": "tsc 1>&2 --outDir lib/cjs",
     "build:esm": "tsc 1>&2 --module es6 --outDir lib/esm",
     "copy": "copyfiles -u 4 src/integration-test/utils/imodels-client-test-utils/assets/* src/integration-test/utils/imodels-client-test-utils/assets/changesets/* lib/cjs/integration-test/utils/imodels-client-test-utils",
+    "copy:test": "copyfiles -u 2 src/test/test-data/* lib/cjs/test",
     "lint": "eslint \"*/**/*.{js,ts}\"",
     "lint:fix": "npm run lint -- --fix",
     "lint:copyright": "node scripts/copyright-linter.js",
@@ -37,7 +38,9 @@
     "url": "https://github.com/iTwin/insights-client"
   },
   "dependencies": {
-    "cross-fetch": "^3.1.4"
+    "cross-fetch": "^3.1.4",
+    "dom-parser": "^0.1.6",
+    "fast-xml-parser": "^4.0.9"
   },
   "devDependencies": {
     "@azure/storage-blob": "^12.11.0",
