--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "fast-xml-parser": "^4.0.9"
   },
   "devDependencies": {
+    "@itwin/imodels-client-authoring": "^3.1.0",
+    "@itwin/itwins-client": "^1.2.0",
     "@azure/storage-blob": "^12.11.0",
     "@itwin/build-tools": "^3.0.0",
     "@itwin/core-bentley": "^3.0.0",
